--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -605,7 +605,7 @@
 		<li><strong>Coorg (Kodagu)</strong>– Further west of Mysore, nestled in the Western Ghats, is the hill country of Coorg. It is known for 
 		its coffee estates and its distinct Kodava culture and language. The source of the Cauvery river (Talakaveri), and the Tibetan Buddhist 
 		monastery and settlement at Kushalnagara are local attractions.
-		KSTDC's <a href="http://www.karnatakaholidays.net/karnataka_hotels_madikkeri.htm">Mayura Hotel</a> in the district headquarters of Madikeri 
+		KSTDC's <a href="https://www.kstdc.co/mayura-hotels/">Mayura Hotel</a> in the district headquarters of Madikeri 
 		is an excellent overnight stay option.</li>
  			
  		<li><strong>Bandipur</strong> – On a safari here you may get to spot the elusive tiger. The safari sans tiger is also memorable and will 
@@ -617,7 +617,7 @@
  			
                 <li><strong>Hampi</strong> – The capital city of the mighty Vijayanagara empire, which now lies in ruins on the banks of the Tungabhadra 
                 river in north-central Karnataka. A UNESCO World Heritage site, listed as a must-see on any tourist itinerary of South India. 
-                <a href="http://www.karnatakaholidays.net/heritage_holidays_mantralaya.htm">More info.</a></li>
+                <a href="https://www.kstdc.co/tour-packages/mantralaya-tungabhadra-dam-hampi/">More info.</a></li>
 
 		<li><strong>Devbagh</strong> - Located in the northwest of Karnataka, this coastline is different from the one at Goa or Kerala, 
 		and quite enjoyable. However, you will be traveling there in the Monsoon season so be prepared to risk dark clouds and pouring rain. 
