--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -579,10 +579,9 @@
  		<li><strong>Mysore</strong> - The erstwhile capital of Karnataka was Mysore and the last rulers resided here. This trip covers among other things - 
  		Srirangapatna (Tipu Sultan's palace), Chamundi Hills, Mysore Palace. <a href="https://www.kstdc.co/tour-packages/mysuru-sight-seeing/">More info</a>.</li>
  					
-		<li><strong>Ranganthittu Bird Sanctuary</strong> - An excellent place for bird lovers. This is covered in a day trip offered by KSTDC. 
-		<a href="http://www.karnatakaholidays.net/nature_holidays_shivanasamudra.htm">More info</a>. However, if you wish to explore the sanctuary at leisure 
-		it would be better to make a private group trip via taxi. A possible itinerary could then be: Srirangapatna, break at Hotel Mayura 
-		(by the Cauvery river), and finally, the sanctuary.</li>
+		<li><strong>Ranganthittu Bird Sanctuary</strong> - An excellent place for bird lovers. If you would like to leisurely explore the 
+		sanctuary you can make a private group trip via taxi. A possible itinerary could then be: Srirangapatna, break at Hotel Mayura 
+		(by the Cauvery river), and finally, the sanctuary.<a href="http://www.karnatakaholidays.net/nature_holidays_shivanasamudra.htm">More info</a>.</li>
 		 			
 		<li><strong>Bangalore</strong> -  Here's what a Bangalorean may suggest for a day out in the city. Start at Veena Stores, Malleshwaram 
 		for a breakfast of idli/vadas. Then take a local bus or auto to Lalbagh gardens. After a refreshing walk, saunter into MTR, the most 
