--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -584,7 +584,7 @@
 		(by the Cauvery river), and finally, the sanctuary. <a href="https://www.kstdc.co/hotels/hotel-mayura-riverview-srirangapatna/">More info</a>.</li>
 		 			
 		<li><strong>Bangalore</strong> -  Here's what a Bangalorean may suggest for a day out in the city. Start at Veena Stores, Malleshwaram 
-		for a breakfast of idli/vadas. Then take a local bus or auto to Lalbagh gardens. After a refreshing walk, saunter into MTR, the most 
+		for a breakfast of idli/vadas. Then take a local bus or auto to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Lalbagh gardens</a>. After a refreshing walk, saunter into MTR, the most 
 		famous of Bangalore's beloved “tiffin rooms”. Enjoy coffee in a silver mug. Then put in couple of steps to Hotel Kamat Minerva for a 
 		Mangalore-based South-Indian thali. Next, catch an auto and use your prayer beads to get you safely to Cubbon park. Drink in old rain 
 		trees and then pop into Cauvery on MG Road or Commercial street for some shopping. If you would rather avoid shopping, proceed directly 
