--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -580,16 +580,17 @@
  		Srirangapatna (Tipu Sultan's palace), Chamundi Hills, Mysore Palace. <a href="https://www.kstdc.co/tour-packages/mysuru-sight-seeing/">More info</a>.</li>
  					
 		<li><strong>Ranganthittu Bird Sanctuary</strong> - An excellent place for bird lovers. If you would like to leisurely explore the 
-		sanctuary you can make a private group trip via taxi. A possible itinerary could then be: Srirangapatna, break at Hotel Mayura 
-		(by the Cauvery river), and finally, the sanctuary. <a href="https://www.kstdc.co/hotels/hotel-mayura-riverview-srirangapatna/">More info</a>.</li>
+		<a href="https://www.karnatakatourism.org/tour-item/ranganathittu-bird-sanctuary/">sanctuary</a> you can make a private group trip via taxi. A possible itinerary 
+		could then be: Srirangapatna, break at Hotel Mayura (by the Cauvery river), and finally, the sanctuary. 
+		<a href="https://www.kstdc.co/hotels/hotel-mayura-riverview-srirangapatna/">More info</a>.</li>
 		 			
 		<li><strong>Bangalore</strong> -  Here's what a Bangalorean may suggest for a day out in the city. Start at Veena Stores, Malleshwaram 
-		for a breakfast of idli/vadas. Then take a local bus or auto to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Lalbagh gardens</a>. After a refreshing walk, saunter into MTR, the most 
-		famous of Bangalore's beloved “tiffin rooms”. Enjoy coffee in a silver mug. Then put in couple of steps to Hotel Kamat Minerva for a 
-		Mangalore-based South-Indian thali. Next, catch an auto and use your prayer beads to get you safely to Cubbon park. Drink in old rain 
-		trees and then pop into Cauvery on MG Road or Commercial street for some shopping. If you would rather avoid shopping, proceed directly 
-		to soaking yourself to the gills at Koshy’s on St. Mark's Road. An old hangout known as much for it’s chilled-out service as well as 
-		ambience. Order Indian-Chinese (try Gobi Manchurian), peanut fry or papad-masala to try Indian bar snacks. </li>
+		for a breakfast of idli/vadas. Then take a local bus or auto to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Lalbagh gardens</a>.
+		After a refreshing walk, saunter into MTR, the most famous of Bangalore's beloved “tiffin rooms”. Enjoy coffee in a silver mug. 
+		Then put in couple of steps to Hotel Kamat Minerva for a Mangalore-based South-Indian thali. Next, catch an auto and use your prayer beads 
+		to get you safely to Cubbon park. Drink in old rain trees and then pop into Cauvery on MG Road or Commercial street for some shopping. 
+		If you would rather avoid shopping, proceed directly to soaking yourself to the gills at Koshy’s on St. Mark's Road. An old hangout known as 
+		much for it’s chilled-out service as well as ambience. Order Indian-Chinese (try Gobi Manchurian), peanut fry or papad-masala to try Indian bar snacks. </li>
  		</ul>
  		</p>
 
