--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -580,7 +580,7 @@
  		Srirangapatna (Tipu Sultan's palace), Chamundi Hills, Mysore Palace. <a href="https://www.kstdc.co/tour-packages/mysuru-sight-seeing/">More info</a>.</li>
  					
 		<li><strong>Ranganthittu Bird Sanctuary</strong> - An excellent place for bird lovers. If you would like to leisurely explore the 
-		<a href="https://www.karnatakatourism.org/tour-item/ranganathittu-bird-sanctuary/"> sanctuary you can make a private group trip via taxi. A possible itinerary 
+		<a href="https://www.karnatakatourism.org/tour-item/ranganathittu-bird-sanctuary/">sanctuary</a> you can make a private group trip via taxi. A possible itinerary 
 		could then be: Srirangapatna, break at Hotel Mayura (by the Cauvery river), and finally, the sanctuary. 
 		<a href="https://www.kstdc.co/hotels/hotel-mayura-riverview-srirangapatna/">More info</a>.</li>
 		 			
