--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -574,7 +574,7 @@
  		<ul class="text mb-6">
  	       	<li><strong>Belur/ Halebeedu / Shravanabelagola </strong>- Visit Hoysala period temples renowned for their stone carvings (11th century) 
  		and a Mahaveer Jain monolith.	The best organized trip is one by KSTDC. 
- 		<a href="https://www.kstdc.co/tour-packages/belur-halebeedu-shravanabelagola-blr/">More info</a>. (Recommended)</li><br/>
+ 		<a href="https://www.kstdc.co/tour-packages/belur-halebeedu-shravanabelagola-blr/">More info</a>. (Recommended)</li><br>
  		        	
  		<li><strong>Mysore</strong> - The erstwhile capital of Karnataka was Mysore and the last rulers resided here. This trip covers among other things - 
  		Srirangapatna (Tipu Sultan's palace), Chamundi Hills, Mysore Palace. <a href="https://www.kstdc.co/tour-packages/mysuru-sight-seeing/">More info</a>.</li>
