--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -576,7 +576,7 @@
  		and a Mahaveer Jain monolith.	The best organized trip is one by KSTDC. 
  		<a href="https://www.kstdc.co/tour-packages/belur-halebeedu-shravanabelagola-blr/">More info</a>. (Recommended)</li><br>
  		        	
- 		<li><strong>Mysore</strong> - The erstwhile capital of Karnataka was Mysore and the last rulers resided here. This trip covers among other things - 
+ 		<li><strong>Mysore</strong> - The erstwhile capital of Karnataka and the abode of its last rulers. This trip covers among other things - 
  		Srirangapatna (Tipu Sultan's palace), Chamundi Hills, Mysore Palace. <a href="https://www.kstdc.co/tour-packages/mysuru-sight-seeing/">More info</a>.</li><br>
  					
 		<li><strong>Ranganthittu Bird Sanctuary</strong> - An excellent place for bird lovers. If you would like to leisurely explore the 
