--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -616,7 +616,7 @@
                 Nagarhole. Again, <a href="http://www.junglelodges.com/kabini-river-lodge/">Jungle Lodges</a> provides the best accommodation option. (Recommended)</li><br />
  			
                 <li><strong>Hampi</strong> – The capital city of the mighty Vijayanagara empire, which now lies in ruins on the banks of the Tungabhadra 
-                river in north-central Karnataka. A UNESCO World Heritage site, listed as a must-see on any tourist itinerary of South India. 
+                river in northern Karnataka. A UNESCO World Heritage site, listed as a must-see on any tourist itinerary of South India. 
                 <a href="https://www.kstdc.co/tour-packages/mantralaya-tungabhadra-dam-hampi/">More info.</a></li><br />
 
 		<li><strong>Devbagh</strong> - Located in the northwest of Karnataka, this coastline is different from the one at Goa or Kerala, 
