--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -532,14 +532,11 @@
                     <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 2</a></h5>
                     <p style="text-align: center;">Amrita University 2, Coimbatore, July 15-17</p>
                 </div>
-
                 <div class="col-sm">
                     <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 4</a></h5>
                     <p style="text-align: center;">Amrita  University 4, Coimbatore, July 15-17</p>
                 </div>
-
             </div>
-
     </div>
 -->
    
@@ -588,10 +585,9 @@
 		for a breakfast of idli/vadas. Then take a local bus or auto to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Lalbagh gardens</a>.
 		After a refreshing walk, saunter into MTR, the most famous of Bangalore's beloved “tiffin rooms”. Enjoy coffee in a silver mug. 
 		Then put in couple of steps to Hotel Kamat Minerva for a Mangalore-based South-Indian thali. Next, catch an auto and use your prayer beads 
-		to get you safely to Cubbon park. Drink in old rain trees and then pop into 
-		Cauvery on MG Road or Commercial street for some shopping. If you would rather avoid shopping, proceed directly to soaking yourself 
-		to the gills at Koshy’s on St. Mark's Road. An old hangout known as much for it’s chilled-out service as well as ambience. Order Indian-Chinese 
-		(try Gobi Manchurian), peanut fry or papad-masala to try Indian bar snacks. </li><br>
+		to get you safely to Cubbon park. Drink in old rain trees and then pop into Cauvery on MG Road or Commercial street for some shopping. 
+		If you would rather avoid shopping, proceed directly to soaking yourself to the gills at Koshy’s on St. Mark's Road. An old hangout known as 
+		much for it’s chilled-out service as well as ambience. Order Indian-Chinese (try Gobi Manchurian), peanut fry or papad-masala to try Indian bar snacks. </li><br>
  		</ul>
  		</p>
 
