--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -585,7 +585,7 @@
 		for a breakfast of idli/vadas. Then take a local bus or auto to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Lalbagh gardens</a>.
 		After a refreshing walk, saunter into MTR, the most famous of Bangalore's beloved “tiffin rooms”. Enjoy coffee in a silver mug. 
 		Then put in couple of steps to Hotel Kamat Minerva for a Mangalore-based South-Indian thali. Next, catch an auto and use your prayer beads 
-		to get you safely to <a href="https://www.karnatakatourism.org/tour-item/lalbagh-botanical-garden/">Cubbon park</a>. Drink in old rain trees and then pop into Cauvery on MG Road or Commercial street for some shopping. 
+		to get you safely to Cubbon park. Drink in old rain trees and then pop into Cauvery on MG Road or Commercial street for some shopping. 
 		If you would rather avoid shopping, proceed directly to soaking yourself to the gills at Koshy’s on St. Mark's Road. An old hangout known as 
 		much for it’s chilled-out service as well as ambience. Order Indian-Chinese (try Gobi Manchurian), peanut fry or papad-masala to try Indian bar snacks. </li><br>
  		</ul>
