--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -597,8 +597,8 @@
                <p>
                <ul class="text mb-6">
  		<li><strong>Chikmagalur</strong> – Home to some of India’s finest coffee estates, you can learn about the history and varieties of coffee grown in Karnataka.
-		The <a href="https://www.karnatakatourism.org/tour-item/bhadra-wildlife-sanctuary-and-tiger-reserve/">Bhadra Wildlife</a> Santuary, famous for its tigers, 
-		is a great choice for any ecotourist. For those who choose to do so, an option for accomodation is provided by 
+		The <a href="https://www.karnatakatourism.org/tour-item/bhadra-wildlife-sanctuary-and-tiger-reserve/">Bhadra Wildlife Sanctuary</a>, famous for its tigers, 
+		is a great choice for any ecotourist. For those who choose to do so, an option for accommodation is provided by 
 		<a href="https://www.junglelodges.com/resort/river-tern-lodge/">Jungle Lodges</a>. Another way to experience Chikmagalur would be to explore one of the various 
 		homestays run by private operators. <a href="https://www.karnatakatourism.org/tour-item/chikkamagaluru/">More Info</a>.</li><br />
  					
