--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -600,7 +600,7 @@
 		The <a href="https://www.karnatakatourism.org/tour-item/bhadra-wildlife-sanctuary-and-tiger-reserve/">Bhadra Wildlife Sanctuary</a>, famous for its tigers, 
 		is a great choice for any ecotourist. For those who choose to do so, an option for accommodation is provided by 
 		<a href="https://www.junglelodges.com/resort/river-tern-lodge/">Jungle Lodges</a>. Another way to experience Chikmagalur would be to explore one of the various 
-		homestays run by private operators. <a href="https://www.karnatakatourism.org/tour-item/chikkamagaluru/">More Info</a>.</li><br />
+		homestays run by private operators. <a href="https://www.karnatakatourism.org/tour-item/chikkamagaluru/">More lInfo</a>.</li><br />
  					
 		<li><strong>Coorg (Kodagu)</strong>– Further west of Mysore, nestled in the Western Ghats, is the hill country of Coorg. It is known for 
 		its coffee estates and its distinct Kodava culture and language. The source of the Cauvery river (Talakaveri), and the Tibetan Buddhist 
