--- a/startbootstrap-creative-gh-pages/index.html
+++ b/startbootstrap-creative-gh-pages/index.html
@@ -645,9 +645,24 @@
 	       <h5 style="text-align: justify;">Hikes and treks around Bangalore</h5>
                <hr>  
 	       <p class="text mb-6">
-		The areas around Bangalore offer a plethora of hiking trails, that offer beautiful views of the sunrise. 
+		The areas around Bangalore offer a plethora of hiking trails, that offer beautiful vistas. Atop these hills one comes face to face
+		with lakes, verdant greens, cityscapes, temples, or the ruins of historic forts. For more information about hikes and treks around Bangalore visit
+		Karnataka state's eco tourism <a href="https://www.karnatakaecotourism.com/">w</a>. Since the conference is taking placebeing scheduled in the
+		monsoon season hiking is generally a dangerous activity, so be sure to check the weather if you plan to go on a hike.
+	        
 	       <ul class="text mb-6">
- 	        <li><strong>Nandi Hills</strong> </li><br />
+ 	        <li><strong>Nandi Hills</strong> </li><br /> 
+		   Perhaps the quintessential Bangalore hiking experience, located about 60km along the airport road. Nandi Hills is a perfect respite from the hustle 
+		   and bustle of the city. A host of available amenities such as food, trekking guides, well marked trails, and clear signage has lead to its popularity.
+		   The original temples atop Nandi Hills are over 1100 years old which have been added to by the many dynasties that ruled over the area since then. 
+		   Many other sights of historical significance such as the Tipu Sultan's Summer Palace are demarcated by the aforementioned signage so you won't miss a thing.
+		   An option for accomodation atop Nandi Hills is <a href="https://www.kstdc.co/hotels/hotel-mayura-pine-top-nandi-hills/">Hotel Mayura</a> Pine Top.
+		   <a href="https://www.karnatakatourism.org/tour-item/nandi-hills/">More Info.</a>
+		<li><strong>Skandagiri</strong></li><br />
+		<li><strong>Makalidurga</strong></li><br />
+		<li><strong>Antharagange</strong></li><br />
+		<li><strong>Antharagange</strong></li><br />
+		<li><strong>Savandurga</strong></li><br />
 	        </ul>
 	       
 	       </p>
